# END2JOINT

./: .gitignore  0611.txt  README.md  episode_000000_action_fk.txt  方案.md
actibot_sdk/: README.md  actibot_keyboard_ctrl.py  actibot_ros_main.py  application_main.py  data_collector_main.py  package.xml  setup.sh  teleop_main.py
actibot_sdk/config/: application_config.yaml  control_config.yaml  ros_config.yaml  teleop_config.yaml
actibot_sdk/robot_description/v3/config/: joint_names_v3_urdf_251121-2.yaml
actibot_sdk/robot_description/v3/launch/: display.launch  gazebo.launch
actibot_sdk/robot_description/v3/urdf/: v3_urdf_251121-2.csv  v3_urdf_251121-2.urdf  v3_urdf_251121-2_ik.urdf
actibot_sdk/tool/: urdf_delete_mesh.py
docs/: actibot_fk_example.py  env_setup_and_fix.md
example/: README.md  actibot_fk.py  analyze_fk_batch.py  compute_fk_action.py  compute_fk_batch.py  ee_pose_node.py  visualize_fk.py
ik_ee2joint/: README.md  config.py  dataloader.py  evaluate.py  fk_utils.py  model.py  predict.py  predict_new_data.py  train.py
ik_net/: README.md  config.py  dataloader.py  evaluate.py  fk_utils.py  playback_predictions.py  predict.py  predict_ar.py  train.py  visualize_predictions.py
ik_net/0611_end2action_model/: 0611_model.pt
ik_net/save_real/: 0623_fk实验.txt  (+2 more)
ik_net_robust/: README.md  config.py  dataloader.py  evaluate.py  fk_utils.py  model.py  predict.py  requirements.txt  test_ar.py  train.py
server/: ik_validation_fk_server.py  ik_validation_server.py  replay_client.py  replay_parquet.py  replay_server.py  test_joint_state_receiver.py
(+10 files in other folders)
